--- a/hugo.toml
+++ b/hugo.toml
@@ -792,7 +792,7 @@ enableEmoji = true
       Mix = false
     # FixIt 0.2.15 | CHANGED Comment config
     [params.page.comment]
-      enable = false
+      enable = true
       # FixIt 0.2.13 | NEW Artalk comment config (https://artalk.js.org/)
       [params.page.comment.artalk]
         enable = false
@@ -895,10 +895,10 @@ enableEmoji = true
         enable = false
         # owner/repo
         repo = ""
-        issueTerm = "pathname"
+        issueTerm = ""
         label = ""
-        lightTheme = "github-light"
-        darkTheme = "github-dark"
+        lightTheme = ""
+        darkTheme = ""
       # FixIt 0.2.13 | NEW Twikoo comment config (https://twikoo.js.org/)
       [params.page.comment.twikoo]
         enable = false
@@ -926,7 +926,7 @@ enableEmoji = true
         inputPosition = "bottom" # ["top", "bottom"]
         lightTheme = "light"
         darkTheme = "dark"
-        lazyLoad = true
+        lazyLoad = false
     # Third-party library config
     [params.page.library]
       [params.page.library.css]
