--- a/hugo.toml
+++ b/hugo.toml
@@ -40,26 +40,46 @@ enableEmoji = true
 
 [menu]
   [[menu.main]]
+    identifier = "home"
+    parent = ""
+    pre = ""
+    post = ""
+    name = "Home"
+    url = "/"
+    title = ""
+    weight = 1
+    [menu.main.params]
+      class = "menu-link"
+      draft = false
+      icon = ""
+      type = ""
+  [[menu.main]]
+    identifier = "about"
+    parent = ""
+    pre = ""
+    post = ""
+    name = "About"
+    url = "/about/"
+    title = ""
+    weight = 2
+    [menu.main.params]
+      class = ""
+      draft = false
+      icon = ""
+      type = ""
+  [[menu.main]]
     identifier = "archives"
     parent = ""
-    # you can add extra information before the name (HTML format is supported), such as icons
     pre = ""
-    # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
     name = "Archives"
     url = "/archives/"
-    # title will be shown when you hover on this menu link
     title = ""
-    weight = 1
-    # FixIt 0.2.14 | NEW add user-defined content to menu items
+    weight = 3
     [menu.main.params]
-      # add css class to a specific menu item
       class = ""
-      # whether set as a draft menu item whose function is similar to a draft post/page
       draft = false
-      # FixIt 0.2.16 | NEW add fontawesome icon to a specific menu item
-      icon = "fa-solid fa-archive"
-      # FixIt 0.2.16 | NEW set menu item type, optional values: ["mobile", "desktop"]
+      icon = ""
       type = ""
   [[menu.main]]
     identifier = "categories"
@@ -69,9 +89,12 @@ enableEmoji = true
     name = "Categories"
     url = "/categories/"
     title = ""
-    weight = 2
+    weight = 4
     [menu.main.params]
-      icon = "fa-solid fa-folder-tree"
+      class = ""
+      draft = false
+      icon = ""
+      type = ""
   [[menu.main]]
     identifier = "tags"
     parent = ""
@@ -80,10 +103,12 @@ enableEmoji = true
     name = "Tags"
     url = "/tags/"
     title = ""
-    weight = 3
+    weight = 5
     [menu.main.params]
-      icon = "fa-solid fa-tags"
-
+      class = ""
+      draft = false
+      icon = ""
+      type = ""
 # -------------------------------------------------------------------------------------
 # Related content Configuration
 # See: https://gohugo.io/content-management/related/
